<resources>
    <string name="app_name">1191035_NourRabee_1192110_NajwaBsharat</string>
    <string name="title_activity_login_and_reg">LoginAndRegActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_customer">Customer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_favorite">Favorites</string>
    <string name="menu_special">Special Offers</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_car">Cars</string>
    <string name="menu_reservations">Reservations</string>
    <string name="menu_delete_user">Delete User</string>
    <string name="menu_add_admin">Add Admin</string>
    <string name="menu_list_reserves">List Reserves</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin">AdminActivity</string>


</resources>