<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_car"
            android:icon="@drawable/list"
            android:title="@string/menu_car" />
        <item
            android:id="@+id/nav_reservations"
            android:icon="@drawable/reservations"
            android:title="@string/menu_reservations" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_special"
            android:icon="@drawable/tags_solid"
            android:title="@string/menu_special" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contacts"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>
</menu>