<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_delete_user"
            android:icon="@drawable/remove"
            android:title="@string/menu_delete_user" />
        <item
            android:id="@+id/nav_add_admin"
            android:icon="@drawable/add"
            android:title="@string/menu_add_admin" />
        <item
            android:id="@+id/nav_list_reserves"
            android:icon="@drawable/list"
            android:title="@string/menu_list_reserves" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>
</menu>